@@ -1,4 +1,4 @@
-packdir = $(datadir)/games/ember/media/packs
+packdir = $(datadir)/ember/media/packs
 dist_pack_DATA = EmberCore.zip OgreCore.zip
 
 METASOURCES = AUTO
