@@ -3,13 +3,13 @@ METASOURCES = AUTO
 
 
 
-ceguifontsdir = $(datadir)/games/ember/media/gui/cegui/datafiles/fonts
-ceguiimagesetsdir = $(datadir)/games/ember/media/gui/cegui/datafiles/imagesets
-ceguilayoutsdir = $(datadir)/games/ember/media/gui/cegui/datafiles/layouts
-ceguischemesdir = $(datadir)/games/ember/media/gui/cegui/datafiles/schemes
-ceguiconfigdir = $(datadir)/games/ember/media/gui/cegui/datafiles/configs
-ceguilooknfeeldir = $(datadir)/games/ember/media/gui/cegui/datafiles/looknfeel
-ceguischemadir = $(datadir)/games/ember/media/gui
+ceguifontsdir = $(datadir)/ember/media/gui/cegui/datafiles/fonts
+ceguiimagesetsdir = $(datadir)/ember/media/gui/cegui/datafiles/imagesets
+ceguilayoutsdir = $(datadir)/ember/media/gui/cegui/datafiles/layouts
+ceguischemesdir = $(datadir)/ember/media/gui/cegui/datafiles/schemes
+ceguiconfigdir = $(datadir)/ember/media/gui/cegui/datafiles/configs
+ceguilooknfeeldir = $(datadir)/ember/media/gui/cegui/datafiles/looknfeel
+ceguischemadir = $(datadir)/ember/media/gui
 
 
 dist_ceguifonts_DATA = datafiles/fonts/Font.xsd datafiles/fonts/tahoma-14.xml datafiles/fonts/tahoma-10.xml datafiles/fonts/tahoma-8.xml datafiles/fonts/tahoma.ttf datafiles/fonts/vera-sans-14.xml datafiles/fonts/vera-sans-10.xml datafiles/fonts/vera-sans-8.xml datafiles/fonts/Vera.ttf
