@@ -4,11 +4,11 @@ current = $(PWD)
 
 dist-hook:
 	mkdir -p $(distdir)
-	(cd $(top_srcdir)/src/components/ogre/modeldefinitions; tar cf - `find . -name \*.modeldef.xml` | ( cd $(current); cd $(distdir); tar xf -))
+	(cd $(top_srcdir)/src/components/ogre/modeldefinitions; tar cf - `find . -name \*.modeldef\*` | ( cd $(current); cd $(distdir); tar xf -))
 
 install-data-local:
-	mkdir -p $(DESTDIR)$(datadir)/games/ember/media/modeldefinitions 
-	(cd $(top_srcdir)/src/components/ogre/modeldefinitions; tar cf - `find . -name \*.modeldef.xml`) | (cd $(DESTDIR)$(datadir)/games/ember/media/modeldefinitions; tar xf -)
+	mkdir -p $(DESTDIR)$(datadir)/ember/media/modeldefinitions 
+	(cd $(top_srcdir)/src/components/ogre/modeldefinitions; tar cf - `find . -name \*.modeldef\*`) | (cd $(DESTDIR)$(datadir)/ember/media/modeldefinitions; tar xf -)
 
 uninstall-local:
-	find $(DESTDIR)$(datadir)/games/ember/media/modeldefinitions -name  \*.modeldef.xml | xargs rm
+	find $(DESTDIR)$(datadir)/ember/media/modeldefinitions -name  \*.modeldef\* | xargs rm
